--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>MC 題目練習</title>
+  <title>狂做十二篇範文MC</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <h1>📘 MC 題目練習</h1>
+  <h1>📘狂做十二篇範文MC</h1>
   <div class="question-box">
     <p id="question">題目載入中...</p>
     <div id="choices"></div>
